# Enarx-Demo

./: .gitignore  Cargo.toml  README.md
data/: test.csv  train.csv
fibonacci/: Cargo.toml  secret-search
fibonacci/src/: main  main.rs
src/: diabetes.csv  main.rs
