[package]
name = "Enarx-Demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ndarray = { version = "0.13"}
approx = "0.3.2"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
reqwest = {version="0.11.4", features = ["blocking"]}
zip = "0.5.13"