[package]
name = "Enarx-Demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ndarray = { version = "0.13"}
approx = "0.3.2"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
tempfile = "3.3.0"
tokio = { version = "1.6.4", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
error-chain = "0.12.4"